// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should affect error message after formatting 1`] = `
"
<<<<<< before
ERROR: (max-line-length) /src/tslint/max-line-length/test.ts[1, 1]: Exceeds maximum line length of 80

======
no error

>>>>>> after
"
`;

exports[`should be pretty after formatting 1`] = `
"
<<<<<< before
this.is.a.long().long().long().long().long().long().long().long().long().long().method();

======
this.is.a
  .long()
  .long()
  .long()
  .long()
  .long()
  .long()
  .long()
  .long()
  .long()
  .long()
  .method();

>>>>>> after
"
`;
